# mlc

./: .clang-format  .gitignore  CMakeLists.txt  main.c
lib/: datasets.h  la.c  la.h  linear_models.c  linear_models.h  tensor.c  tensor.h  utils.c  utils.h
src/: ord_lin_reg.c
test/: test_la.c  test_linear_models.c  test_tensor.c
